# rtodo

./: Cargo.toml  README.md  config.toml  todo.txt
src/: app.rs  config.rs  main.rs  tasks.rs  tui.rs  ui.rs
