[package]
name = "rtodo"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = "0.6.3"
color-to-tui = "0.3.0"
directories = "5.0.1"
ratatui = "0.27.0"
serde = { version = "1.0.207", features = ["derive"] }
time = { version = "0.3.36", features = ["formatting", "macros", "parsing", "local-offset"] }
toml = "0.8.19"
tui-input = "0.9.0"
