[package]
name = "rtodo"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
color-eyre = "0.6.3"
color-to-tui = "0.3.0"
directories = "5.0.1"
ratatui = { version = "0.28.1", features = ["unstable-widget-ref"] }
serde = { version = "1.0.207", features = ["derive"] }
toml = "0.8.19"
tui-input = "0.10.0"
